kube/octavia/kubex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubex
  name: kubex
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kubex
  template:
    metadata:
      labels:
        app: kubex
    spec:
      containers:
      - image: dveb8886/kube_experiments:latest
        name: kubex
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /alive
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: kubex
  labels:
    app: kubex
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 8080
  selector:
    app: kubex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubex
  annotations:
    # Disables http redirect to https
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Enables use of octavia
    kubernetes.io/ingress.class: "openstack"
    octavia.ingress.kubernetes.io/internal: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kubex
          servicePort: 80
